infra/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ems-web
  namespace: ems
spec:
  selector:
    app: ems-web
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
